Working on Main page

--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,7 +1,7 @@
 <div class="backdrop"></div>
 <header class="main-header">
     <button id="side-menu-toggle">☰</button>
-    <nav class="main__nav">
+    <nav class="main__nav main_width">
         <ul class="main__nav_list">
             <li class="main__nav_item"><a href="" class="active">Pictournal</a></li>
             <li class="main__nav_item"><a href="">Your Profile</a></li>
