--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -185,4 +185,78 @@ p {
     width: 30rem;
   }
 }
+
+.main_width {
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul {
+  list-style: none;
+}
+
+.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.gallery li {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border: 5pt solid white;
+}
+
+.gallery li:last-child {
+  -webkit-box-flex: 10;
+      -ms-flex-positive: 10;
+          flex-grow: 10;
+}
+
+.gallery img {
+  max-height: 100%;
+  min-width: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  vertical-align: bottom;
+  height: 100%;
+}
+
+@media (max-aspect-ratio: 1 / 1) {
+  .gallery li {
+    height: 30vh;
+  }
+}
+
+@media (max-height: 480px) {
+  .gallery li {
+    height: 80vh;
+  }
+}
+
+@media (max-aspect-ratio: 1 / 1) and (max-width: 480px) {
+  .gallery ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .gallery li {
+    height: auto;
+    width: 100%;
+  }
+  .gallery img {
+    width: 100%;
+    max-height: 75vh;
+    min-width: 0;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
