--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -16,6 +16,12 @@ ul {
     // height: 100%;
     flex-grow: 1;
     border: 5pt solid white;
+    overflow: hidden;
+}
+
+.gallery li:hover {
+    overflow: hidden;
+    opacity: 0.7;
 }
 
 .gallery li:last-child {
@@ -26,7 +32,7 @@ ul {
 .gallery img {
     max-height: 100%;
     min-width: 100%;
-    object-fit: fill;
+    object-fit: cover;
     vertical-align: bottom;
     height: 100%;
 }
