--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -213,6 +213,12 @@ ul {
       -ms-flex-positive: 1;
           flex-grow: 1;
   border: 5pt solid white;
+  overflow: hidden;
+}
+
+.gallery li:hover {
+  overflow: hidden;
+  opacity: 0.7;
 }
 
 .gallery li:last-child {
@@ -224,8 +230,8 @@ ul {
 .gallery img {
   max-height: 100%;
   min-width: 100%;
-  -o-object-fit: fill;
-     object-fit: fill;
+  -o-object-fit: cover;
+     object-fit: cover;
   vertical-align: bottom;
   height: 100%;
 }
