--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,11 @@
             </p>
             <div class="main_width">
                 <ul class="gallery">
-                    <% for (var i = 0; i < 40; i++){ 
-                        var wid = Math.floor(Math.random() * (4 - 2) + 2)*100;
-                        var hig = Math.floor(Math.random() * (4 - 2) + 2)*100;%>
-                        <li><img src="https://source.unsplash.com/random/<%= wid %>x<%= hig %>?sig=<%= i %>" loading="lazy"></li>
-
+                    <% var max = 50;
+                        for (var i = 0; i < max; i++){ 
+                        var w = Math.floor(Math.random() * (4 - 2) + 2)*100;
+                        var h = Math.floor(Math.random() * (4 - 2) + 2)*100;%>
+                        <li><img src="https://source.unsplash.com/random/<%= w %>x<%= h %>?sig=<%= i %>" loading="lazy"></li>
                         <% } %>
                 </ul>
             </div>
