--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -68,3 +68,11 @@ ul {
         min-width: 0;
     }
 }
+
+.line {
+    width: 100%;
+    height: 2px;
+    border-bottom: 1px solid black;
+    margin: 0;
+    margin-top: -10px;
+}
