--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,6 +151,14 @@ body {
   background-color: rgba(95, 49, 49, 0.3);
 }
 
+.message_main {
+  margin-top: 10px;
+  background: -webkit-gradient(linear, left top, right top, from(#bbbbbb), color-stop(35%, #eeeeee), to(#858585));
+  background: linear-gradient(90deg, #bbbbbb 0%, #eeeeee 35%, #858585 100%);
+  padding: 10px 50px;
+  border-radius: 10px;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -263,5 +271,13 @@ ul {
     max-height: 75vh;
     min-width: 0;
   }
+}
+
+.line {
+  width: 100%;
+  height: 2px;
+  border-bottom: 1px solid black;
+  margin: 0;
+  margin-top: -10px;
 }
 /*# sourceMappingURL=styles.css.map */
