Profile + Edit Profile

--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -31,6 +31,10 @@ ul {
     height: 100%;
 }
 
+.profile_img {
+    border-radius: 150px;
+}
+
 // ADVANCED
 // Portrait
 @media (max-aspect-ratio: 1/1) {
