Prelim Follow Page

--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -227,6 +227,11 @@ p {
     background-color: black;
 }
 
+.link {
+    text-decoration: none;
+    color: black;
+}
+
 @include MQ(M) {
     .main__nav {
         display: flex;
