--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -234,6 +234,11 @@ p {
   background-color: black;
 }
 
+.link {
+  text-decoration: none;
+  color: black;
+}
+
 @media only screen and (min-width: 768px) {
   .main__nav {
     display: -webkit-box;
