--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,11 +144,13 @@ body {
 }
 
 .main__nav_item a:hover {
-  background-color: rgba(95, 49, 49, 0.5);
+  background-color: black;
+  mix-blend-mode: soft-light;
 }
 
 .active {
-  background-color: rgba(95, 49, 49, 0.3);
+  background-color: black;
+  mix-blend-mode: overlay;
 }
 
 .message_main {
