--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -143,12 +143,13 @@ body {
 }
 
 .main__nav_item a:hover {
-    background-color: rgba(95, 49, 49, 0.5);
+    background-color: black;
+    mix-blend-mode: soft-light;
 }
 
 .active {
-    //border-bottom: 3px solid $secondary;
-    background-color: rgba(95, 49, 49, 0.3);
+    background-color: black;
+    mix-blend-mode: overlay;
 }
 
 .message_main {
