--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -80,3 +80,50 @@ ul {
     margin: 0;
     margin-top: -10px;
 }
+
+.feed {
+    padding: 20px;
+    margin: 0;
+    height: 500px;
+    max-width: 500px;
+    img {
+        width: 100%;
+        height: 100%;
+        $color-shad: rgb(194, 194, 194);
+        $blur: 8px;
+        $dpos: 1px;
+        $dneg: -1px;
+        box-shadow: $dpos $dpos $blur $color-shad, $dneg $dneg $blur $color-shad, $dneg $dpos $blur $color-shad, $dpos $dneg $blur $color-shad;
+    }
+    &_lower {
+        // width: 500px;
+        background-color: rgba(rgb(0, 0, 0), 0.8);
+        position: relative;
+        z-index: 10;
+        top: -55px;
+        height: 50px;
+        padding: 10px;
+        color: white;
+    }
+}
+
+.icon_ {
+    position: absolute;
+    top: -30px;
+    &_left {
+        padding-left: 30;
+        float: left;
+    }
+    &_right {
+        padding-right: 30;
+        float: right;
+    }
+    &_text {
+        padding-left: 30;
+    }
+}
+
+.user__static {
+    position: fixed;
+    width: 500px;
+}
