--- a/public/css/scss/_margins.scss
+++ b/public/css/scss/_margins.scss
@@ -3,3 +3,16 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.flex {
+    display: flex;
+}
+
+.right {
+    float: right;
+    max-width: 500px;
+}
+
+.left {
+    float: left;
+}
