--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,6 +9,8 @@
         <%= pageTitle %>
     </title>
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/993431e46b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
