--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -94,6 +94,10 @@ ul {
         $dpos: 1px;
         $dneg: -1px;
         box-shadow: $dpos $dpos $blur $color-shad, $dneg $dneg $blur $color-shad, $dneg $dpos $blur $color-shad, $dpos $dneg $blur $color-shad;
+        &:hover {
+            overflow: hidden;
+            opacity: 0.7;
+        }
     }
     &_lower {
         // width: 500px;
