--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -381,6 +381,11 @@ ul {
           box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
 }
 
+.feed img:hover {
+  overflow: hidden;
+  opacity: 0.7;
+}
+
 .feed_lower {
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
