--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -196,6 +196,14 @@ p {
     font-family: 'Bodoni Moda', sans-serif;
 }
 
+.follow_user {
+    margin: 1em;
+    padding: 1em;
+    /* box-shadow: 0px 0px 16px black; */
+    border: 1px solid grey;
+    border-radius: 7px;
+}
+
 .btn {
     color: black;
     background-color: white;
@@ -247,5 +255,19 @@ p {
     .profile_header .user_bio {
         grid-row-start: 2;
         grid-row-end: 4;
+    }
+    .follow_user {
+        display: grid;
+        grid-template-columns: 1fr 4fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 15px;
+        justify-items: center;
+    }
+    .follow_user .profile_img {
+        grid-row: 1/3;
+    }
+    .follow_user .user_bio {
+        grid-row: 2 / 3;
+        grid-column: 2 / 3;
     }
 }
