--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -198,6 +198,14 @@ p {
   font-family: 'Bodoni Moda', sans-serif;
 }
 
+.follow_user {
+  margin: 1em;
+  padding: 1em;
+  /* box-shadow: 0px 0px 16px black; */
+  border: 1px solid grey;
+  border-radius: 7px;
+}
+
 .btn {
   color: black;
   background-color: white;
@@ -259,6 +267,29 @@ p {
     -ms-grid-row: 2;
         grid-row-start: 2;
     grid-row-end: 4;
+  }
+  .follow_user {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 4fr;
+        grid-template-columns: 1fr 4fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    grid-gap: 15px;
+    justify-items: center;
+  }
+  .follow_user .profile_img {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+  }
+  .follow_user .user_bio {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
   }
 }
 
