--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -1,19 +1,21 @@
 /* Fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Montserrat&display=swap");
 
 /* Colors */
 
 // $grey: #B5BEC6;
 // $main: #364652;
 // $secondary: #C7DBE6;
-$grey: #B5BEC6;
-$main: #2C2A4A;
-$secondary: #4F518C;
-$linear-gradient: linear-gradient(90deg,
-rgba(239, 71, 111, 1) 0%,
-rgba(255, 209, 102, 1) 35%,
-rgba(17, 138, 178, 1) 100%);
+$grey: #b5bec6;
+$main: #2c2a4a;
+$secondary: #4f518c;
+$linear-gradient: linear-gradient(
+  90deg,
+  rgba(239, 71, 111, 1) 0%,
+  rgba(255, 209, 102, 1) 35%,
+  rgba(17, 138, 178, 1) 100%
+);
 // $linear-gradient: linear-gradient( 90deg,
 // rgba(44, 42, 74, 1) 0%,
 // rgba(144, 122, 214, 1) 35%,
@@ -23,90 +25,98 @@ rgba(17, 138, 178, 1) 100%);
 // rgba(252, 221, 188, 1) 35%,
 // rgba(184, 216, 186, 1) 100%);
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    margin: 0;
-    font-family: 'Bodoni Moda', serif;
-    padding-top: 4rem;
+  margin: 0;
+  font-family: "Bodoni Moda", serif;
+  padding-top: 4rem;
+}
+
+form {
+  display: inline;
+}
+
+.centered-link {
+    text-align: center;
 }
 
 .main-header {
-    width: 100%;
-    height: 6rem;
-    padding: 0 1.5rem;
-    display: flex;
-    align-items: center;
-    background: rgb(44, 42, 74);
-    background: $linear-gradient;
-    position: fixed;
-    top: 0;
-    z-index: 10000;
+  width: 100%;
+  height: 6rem;
+  padding: 0 1.5rem;
+  display: flex;
+  align-items: center;
+  background: rgb(44, 42, 74);
+  background: $linear-gradient;
+  position: fixed;
+  top: 0;
+  z-index: 10000;
 }
 
 .main__nav {
-    height: 100%;
-    width: 100%;
-    display: none;
-    align-items: center;
-    justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .main__nav_list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .main__nav_item {
-    margin: 0 1rem;
-    padding: 0;
+  margin: 0 1rem;
+  padding: 0;
 }
 
 .mobile-nav {
-    width: 30rem;
-    height: 100vh;
-    max-width: 90%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background: white;
-    z-index: 10;
-    padding: 2rem 1rem 1rem 2rem;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease-out;
+  width: 30rem;
+  height: 100vh;
+  max-width: 90%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: white;
+  z-index: 10;
+  padding: 2rem 1rem 1rem 2rem;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
 }
 
 .mobile-nav.open {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .mobile-nav__item-list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 .mobile-nav__item {
-    margin: 1rem;
-    padding: 0;
+  margin: 1rem;
+  padding: 0;
 }
 
 .mobile-nav__item a,
 .mobile-nav__item button {
-    font: inherit;
-    text-decoration: none;
-    color: black;
-    font-size: 1.5rem;
-    padding: 0.5rem 2rem;
-    background: transparent;
-    border: none;
-    cursor: pointer;
+  font: inherit;
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  padding: 0.5rem 2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .mobile-nav__item a:active,
@@ -114,160 +124,165 @@ body {
 .mobile-nav__item a.active,
 .mobile-nav__item button:hover,
 .mobile-nav__item button:active {
-    background: $secondary;
-    color: white;
-    border-radius: 5px;
+  background: $secondary;
+  color: white;
+  border-radius: 5px;
 }
 
 #side-menu-toggle {
-    border: none;
-    font: inherit;
-    font-size: xx-large;
-    padding: 0.5rem;
-    display: block;
-    background: transparent;
-    color: white;
-    cursor: pointer;
+  border: none;
+  font: inherit;
+  font-size: xx-large;
+  padding: 0.5rem;
+  display: block;
+  background: transparent;
+  color: white;
+  cursor: pointer;
 }
 
 #side-menu-toggle:focus {
-    outline: none;
+  outline: none;
 }
 
 #side-menu-toggle:active,
 #side-menu-toggle:hover {
-    color: #ffeb3b;
-    border-color: #ffeb3b;
+  color: #ffeb3b;
+  border-color: #ffeb3b;
 }
 
 .main__nav_item a {
-    text-decoration: none;
-    padding: 36px;
-    color: white;
+  text-decoration: none;
+  padding: 36px;
+  color: white;
 }
 
 .main__nav_item a:hover {
-    background-color: black;
-    mix-blend-mode: soft-light;
+  background-color: black;
+  mix-blend-mode: soft-light;
 }
 
 .active {
-    background-color: black;
-    mix-blend-mode: overlay;
+  background-color: black;
+  mix-blend-mode: overlay;
 }
 
 .message_main {
-    margin-top: 10px;
-    background: linear-gradient( 90deg, rgb(187, 187, 187) 0%, rgb(238, 238, 238) 35%, rgb(133, 133, 133) 100%);
-    padding: 10px 50px;
-    border-radius: 10px;
+  margin-top: 10px;
+  background: linear-gradient(
+    90deg,
+    rgb(187, 187, 187) 0%,
+    rgb(238, 238, 238) 35%,
+    rgb(133, 133, 133) 100%
+  );
+  padding: 10px 50px;
+  border-radius: 10px;
 }
 
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 5;
-    display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  display: none;
 }
 
 .main__title {
-    text-align: center;
+  text-align: center;
 }
 
 p {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .centered {
-    max-width: 50%;
-    margin: auto;
+  max-width: 50%;
+  margin: auto;
 }
 
 .profile_header {
-    margin: 1em;
+  margin: 1em;
 }
 
 .user_name {
-    font-size: xx-large;
-    font-family: 'Bodoni Moda', sans-serif;
+  font-size: xx-large;
+  font-family: "Bodoni Moda", sans-serif;
 }
 
 .follow_user {
-    margin: 1em;
-    padding: 1em;
-    /* box-shadow: 0px 0px 16px black; */
-    border: 1px solid grey;
-    border-radius: 7px;
+  margin: 1em;
+  padding: 1em;
+  /* box-shadow: 0px 0px 16px black; */
+  border: 1px solid grey;
+  border-radius: 7px;
 }
 
 .btn {
-    color: black;
-    background-color: white;
-    text-decoration: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: .5em;
-    font-family: 'Montserrat', sans-serif;
-    max-width: 200px;
-    margin: 15px 0;
+  color: black;
+  background-color: white;
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5em;
+  font-family: "Montserrat", sans-serif;
+  max-width: 200px;
+  margin: 15px 0;
 }
 
 .btn:hover {
-    color: white;
-    background-color: black;
+  color: white;
+  background-color: black;
 }
 
 .link {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 @include MQ(M) {
-    .main__nav {
-        display: flex;
-    }
-    #side-menu-toggle {
-        display: none;
-    }
-    .user-message {
-        width: 30rem;
-    }
-    .profile_header {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 1fr 2fr;
-        grid-gap: 15px;
-        justify-items: center;
-        align-items: center;
-    }
-    .profile_header img {
-        grid-row-start: 1;
-        grid-row-end: 3;
-    }
-    .profile_header .user_edit {
-        grid-column-start: 3;
-        grid-column-end: 4;
-    }
-    .profile_header .user_bio {
-        grid-row-start: 2;
-        grid-row-end: 4;
-    }
-    .follow_user {
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        grid-template-rows: 1fr 1fr;
-        grid-gap: 15px;
-        justify-items: center;
-    }
-    .follow_user .profile_img {
-        grid-row: 1/3;
-    }
-    .follow_user .user_bio {
-        grid-row: 2 / 3;
-        grid-column: 2 / 3;
-    }
+  .main__nav {
+    display: flex;
+  }
+  #side-menu-toggle {
+    display: none;
+  }
+  .user-message {
+    width: 30rem;
+  }
+  .profile_header {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    grid-gap: 15px;
+    justify-items: center;
+    align-items: center;
+  }
+  .profile_header img {
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  .profile_header .user_edit {
+    grid-column-start: 3;
+    grid-column-end: 4;
+  }
+  .profile_header .user_bio {
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+  .follow_user {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 15px;
+    justify-items: center;
+  }
+  .follow_user .profile_img {
+    grid-row: 1/3;
+  }
+  .follow_user .user_bio {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+  }
 }
