--- a/public/css/scss/_form.scss
+++ b/public/css/scss/_form.scss
@@ -1,35 +1,48 @@
+form {
+    display: inline;
+}
+
+.form-edit {
+    display: flex;
+    flex-direction: column;
+}
+
+textarea {
+    resize: none;
+}
+
 .login-form {
-  width: 20rem;
-  max-width: 90%;
-  margin: auto;
-  display: block;
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
+    display: block;
 }
 
 .form-control {
-  margin: 1rem 0;
+    margin: 1rem 0;
 }
 
 .form-control label,
 .form-control input,
 .form-control textarea {
-  display: block;
-  width: 100%;
-  margin-bottom: 0.25rem;
+    display: block;
+    width: 100%;
+    margin-bottom: 0.25rem;
 }
 
 .form-control input,
 .form-control textarea {
-  border: 1px solid #a1a1a1;
-  font: inherit;
-  border-radius: 2px;
+    border: 1px solid #a1a1a1;
+    font: inherit;
+    border-radius: 2px;
 }
 
 .form-control input:focus,
 .form-control textarea:focus {
-  outline-color: $linear-gradient;
+    outline-color: $linear-gradient;
 }
 
 .form-control input.invalid,
 .form-control textarea.invalid {
-  border-color: red;
+    border-color: red;
 }
