--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,10 +13,6 @@ body {
   padding-top: 4rem;
 }
 
-form {
-  display: inline;
-}
-
 .centered-link {
   text-align: center;
 }
@@ -460,6 +456,24 @@ ul {
 .user__static {
   position: fixed;
   width: 500px;
+}
+
+form {
+  display: inline;
+}
+
+.form-edit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+textarea {
+  resize: none;
 }
 
 .login-form {
