User changes so far

--- a/views/user/edit-profile.ejs
+++ b/views/user/edit-profile.ejs
@@ -2,12 +2,12 @@
     <%- include('../includes/nav.ejs') %>
         <main>
             <div class="main_width">
-                <form class="form-edit">
+                <form class="form-edit" action="edit-profile">
                     <div class="user_name">Random Name</div>
                     <label for="profile_img">Edit Profile Picture</label>
-                    <input type="file" name="profile_img" id="userImage">
+                    <input class="<%= validationErrors.find(e => e.param === 'userImage') ? 'invalid' : '' %>" type="file" name="profile_img" id="userImage">
                     <label for="user_bio">Edit Bio</label>
-                    <textarea name="user_bio" id="user_bio"></textarea>
+                    <textarea class="<%= validationErrors.find(e => e.param === 'user_bio') ? 'invalid' : '' %>" name="user_bio" id="user_bio"></textarea>
                     <button class="btn" type="submit">Submit</button>
                 </form>
             </div>
