--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -5,7 +5,8 @@
                 <div class="profile_header">
                     <img class="profile_img" src="https://source.unsplash.com/random/300x300">
                     <div class="user_name">Random Name</div>
-                    <span><a class="btn user_edit" href="/edit-profile">Edit Profile</a></span>
+                    <span class="user_edit_box"><a class="btn user_edit" href="/edit-profile">Edit Profile</a>
+                        <a class="btn user_edit" href="/feed">My Feed</a></span>
                     <p class="user_bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis purus eu lacus sodales maximus. Integer ornare iaculis ipsum id scelerisque. Aliquam erat volutpat. Aliquam non tempus est. Mauris euismod leo ac lorem tristique
                         molestie. Nunc eu dapibus arcu. Quisque eleifend magna ut erat volutpat aliquam. Suspendisse potenti. Pellentesque consectetur.</p>
                     <span><a href="/following" class="link"><strong>Following: </strong>
