--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -272,6 +272,21 @@ p {
         grid-row-start: 2;
     grid-row-end: 4;
   }
+  .user_edit_box {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .user_edit_box .user_edit {
+    margin: 5px;
+  }
   .follow_user {
     display: -ms-grid;
     display: grid;
@@ -465,18 +480,6 @@ form {
 .form-edit {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.form-new-post {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  margin-left: 10%;
-  margin-right: 10%;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
