--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -4,21 +4,23 @@
     <nav class="main__nav main_width">
         <ul class="main__nav_list">
             <li class="main__nav_item"><a href="/" class="<%= path === '/' ? 'active' : '' %>">Pictournal</a></li>
-            <li class="main__nav_item"><a href="/profile" class="<%= path === '/profile' ? 'active' : '' %>">Profile</a></li>
-            <li class="main__nav_item"><a href="/newPost" class="<%= path === '/newPost' ? 'active' : '' %>">Add Pictournal</a></li>
+            <% if (isAuthenticated) { %>
+                <li class="main__nav_item"><a href="/profile" class="<%= path === '/profile' ? 'active' : '' %>">Profile</a></li>
+                <li class="main__nav_item"><a href="/newPost" class="<%= path === '/newPost' ? 'active' : '' %>">Add Pictournal</a></li>
+                <% } %>
         </ul>
         <ul class="main__nav_list">
             <% if (!isAuthenticated) { %>
                 <li class="main__nav_item"><a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a></li>
                 <li class="main__nav_item"><a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a></li>
-            <% } else { %>
-                <li class="main__nav_item">
-                    <a class="<%= path === '/logout' ? 'active' : '' %>" href="/logout">Logout</a></li>
+                <% } else { %>
+                    <li class="main__nav_item">
+                        <a class="<%= path === '/logout' ? 'active' : '' %>" href="/logout">Logout</a></li>
                     <!-- <form action="/logout" method="post">
                         <button class="btn" type="submit">Logout</button>
                     </form>
                 </li> -->
-            <% } %>
+                    <% } %>
         </ul>
     </nav>
 </header>
