User: Edit profile, and add profile images

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -380,6 +380,8 @@ ul {
 
 .profile_img {
   border-radius: 150px;
+  max-width: 300px;
+  max-height: 300px;
 }
 
 @media (max-aspect-ratio: 1 / 1) {
