--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -3,27 +3,31 @@
         <main>
             <div class="main_width">
                 <div class="profile_header">
-                    <img class="profile_img" src="https://source.unsplash.com/random/300x300">
-                    <div class="user_name">Random Name</div>
+                    <img class="profile_img" src="<%= user.profileImgUrl %>">
+                    <div class="user_name">
+                        <%= username %>
+                    </div>
                     <span class="user_edit_box"><a class="btn user_edit" href="/edit-profile">Edit Profile</a>
                         <a class="btn user_edit" href="/feed">My Feed</a></span>
-                    <p class="user_bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis purus eu lacus sodales maximus. Integer ornare iaculis ipsum id scelerisque. Aliquam erat volutpat. Aliquam non tempus est. Mauris euismod leo ac lorem tristique
-                        molestie. Nunc eu dapibus arcu. Quisque eleifend magna ut erat volutpat aliquam. Suspendisse potenti. Pellentesque consectetur.</p>
+                    <p class="user_bio">
+                        <%= user.bio %>
+                    </p>
                     <span><a href="/following" class="link"><strong>Following: </strong>
-                        <% 
-                        var min = Math.ceil(1);
-                        var max = Math.floor(2000);
-                        var random = Math.floor(Math.random() * (max - min) + min); %>
-                            <%= random.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","); %>
+                        <%= following %>
                     </a></span>
                 </div>
                 <ul class="gallery">
-                    <% var max = 50;
+                    <!-- <% var max = 50;
                         for (var i = 0; i < max; i++){ 
                         var w = Math.floor(Math.random() * (5 - 2) + 2)*100;
                         var h = Math.floor(Math.random() * (5 - 2) + 2)*100;%>
                         <li><a href="#<%= i %>"><img src="https://source.unsplash.com/random/<%= w %>x<%= h %>?sig=<%= i %>" loading="lazy"></a></li>
-                        <% } %>
+                        <% } %> -->
+                    <% if(!posts) { %>
+                        <h1>Nothing to See! Add a Post?</h1>
+                        <% } else { %>
+                            <h1>There are posts here.</h1>
+                            <% } %>
                 </ul>
             </div>
         </main>
