--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -5,7 +5,7 @@
         <ul class="main__nav_list">
             <li class="main__nav_item"><a href="/" class="<%= path === '/' ? 'active' : '' %>">Pictournal</a></li>
             <% if (isAuthenticated) { %>
-                <li class="main__nav_item"><a href="/profile" class="<%= path === '/profile' ? 'active' : '' %>">Profile</a></li>
+                <li class="main__nav_item"><a href="/profile/<%= user._id %>" class="<%= path === '/profile' ? 'active' : '' %>">Profile</a></li>
                 <li class="main__nav_item"><a href="/newPost" class="<%= path === '/newPost' ? 'active' : '' %>">Add Pictournal</a></li>
                 <% } %>
         </ul>
