adding post to the database

--- a/views/user/newPost.ejs
+++ b/views/user/newPost.ejs
@@ -2,10 +2,10 @@
     <%- include('../includes/nav.ejs') %>
         <main>
             <div class="main_width">
-                <form class="form-new-post">
+                <form class="form-new-post" action="/newPost" method="POST" enctype="multipart/form-data">
                     <div class="user_name">Random Name</div>
-                    <label for="post_img">Please Select Your Picture</label>
-                    <input type="file" name="post_img" id="postImage">
+                    <label for="image">Please Select Your Picture</label>
+                    <input type="file" name="image">
                     <label for="tags">Tags</label>
                     <input type="text" name="tags" placeholder="ex. #food">
                     <label for="post_desc">Description</label>
