--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -39,13 +39,21 @@
                         var h = Math.floor(Math.random() * (5 - 2) + 2)*100;%>
                         <li><a href="#<%= i %>"><img src="https://source.unsplash.com/random/<%= w %>x<%= h %>?sig=<%= i %>" loading="lazy"></a></li>
                         <% } %> -->
-                    <% if(!posts && canEdit) { %>
+                    <%if(!posts && canEdit) { %>
                         <h1>Nothing to See! Add a Post?</h1>
                         <% } else if(!posts) { %>
                             <h1>Nothing to see here.</h1>
                             <% } else { %>
-                                <h1>There are posts here.</h1>
-                                <% } %>
+                                <div>
+                                    <h1>There are posts here.</h1>
+                                </div>
+
+                                <div class="feed">
+                                    <% for (post of posts){  %>
+                                        <a href="../../postDetails/<%= post._id %>"><img class="posts_img" src="/<%= post.image %>"></a>
+                                    <% } %>  
+                                </div>
+                            <% } %>
                 </ul>
             </div>
         </main>
